deploy/kustomize/enterprise/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: adapter-controller-enterprise-defaults
  namespace: sdp-adapter
spec:
  podSelector:
    matchLabels:
      app: adapter-controller
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: sdp-adapter
          podSelector:
            matchLabels:
              app: nats
      ports:
        - protocol: TCP
          port: 4222
